# initialize_fields

./: Cargo.toml  README.md
src/: lib.rs
src/tests/: macro_initialize_fiels.rs
