[package]
name = "initialize_fields"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Triana Escobedo <stescobedo.31@gmail.com>"]
license = "GNU Version 3, 29 June 2007"
description = ""
homepage = "https://github.com/stescobedo92/initialize_fields"
repository = "https://github.com/stescobedo92/initialize_fields"
keywords = ["lib"]
readme = "README.md"
categories = ["lib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"